Приложение psalter: выносные номера стихов расположены "внутри" абзацев (не увеличивают высоту абзаца)

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -54,8 +54,8 @@
 
 		.txt.txt-cu {
 			font-family: 'Ponomar Unicode';
-			font-size: 105%;
-			line-height: 1.4;
+			font-size: 110%;
+			line-height: 1.35;
 		}
 
 		.txt div:first-child, .txt p:first-child {
@@ -85,8 +85,9 @@
 			counter-increment:cnt;
 			content: " " counter(cnt) " ";
 			font-weight: bold;
-			vertical-align: super;
-			font-size: smaller;
+			vertical-align: text-top;
+			font-size: x-small;
+			line-height: .75;
 			color: red;
 		}
 
