Приложение psalter: в колонке "Параллельные места" спрятаны абзацы без содержимого

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -95,6 +95,15 @@
 			content: " " counter(cnt, cu-numbers) " ";
 		}
 
+		.txt-ln p.invisible::before {
+			content: "";
+		}
+
+		body.wrap .txt-ln p.invisible::before {
+			content: " " counter(cnt) " ";
+		}
+
+
 		@counter-style cu-numbers {
 			system: fixed;
 			symbols: а҃ в҃ г҃ д҃ є҃ ѕ҃ з҃ и҃ ѳ҃ і҃ а҃і в҃і г҃і д҃і є҃і ѕ҃і з҃і и҃і ѳ҃і к҃а к҃в к҃г к҃д к҃є к҃s к҃з к҃и к҃ѳ л҃;
@@ -260,16 +269,16 @@
 		<div class="col txt txt-ln">
 			<div>&nbsp;</div>
 			<p>Деян 4:25.</p>
-			<p></p>
-			<p></p>
+			<p class="invisible"></p>
+			<p class="invisible"></p>
 			<p>Втор 28:63; Притч 1:26.</p>
-			<p></p>
+			<p class="invisible"></p>
 			<p>Пс 92:1; Ин 18:37; Евр 12:22.</p>
 			<p>Деян 13:33; Евр 1:5; Евр 5:5.</p>
 			<p>Пс 21:28.</p>
 			<p>Откр 2:27; Откр 19:15.</p>
 			<p>Прем 6:2.</p>
-			<p></p>
+			<p class="invisible"></p>
 			<p>Пс 33:9; Притч 16:20; Ис 30:18; 1 Пет 2:6.</p>
 		</div>
 	</div>
@@ -310,13 +319,13 @@
 		</div>
 		<div class="col txt txt-ln">
 			<p>2 Цар 15:14.</p>
-			<p></p>
-			<p></p>
+			<p class="invisible"></p>
+			<p class="invisible"></p>
 			<p>Пс 27:7.</p>
-			<p></p>
-			<p></p>
+			<p class="invisible"></p>
+			<p class="invisible"></p>
 			<p>Лк 12:4.</p>
-			<p></p>
+			<p class="invisible"></p>
 			<p>Ис 43:11; Ос 13:4.</p>
 		</div>
 	</div>
@@ -356,14 +365,14 @@
 			<p>Спокойно ложусь я и сплю, ибо Ты, Господи, един даешь мне жить в безопасности.</p>
 		</div>
 		<div class="col txt txt-ln">
-			<p></p>
+			<p class="invisible"></p>
 			<p>Пс 3:2.</p>
 			<p>Иов 27:12.</p>
-			<p></p>
+			<p class="invisible"></p>
 			<p>Еф 4:26.</p>
 			<p>Пс 50:19; Пс 61:9.</p>
 			<p>Пс 30:17; Мф 6:10.</p>
-			<p></p>
+			<p class="invisible"></p>
 			<p>Иов 11:19.</p>
 		</div>
 	</div>
