Приложение psalter: в колонки "На русском" и "Параллельные места" добавлен display:none

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -251,7 +251,7 @@
 			<p>Рабо́тайте Го́сподеви со стра́хом и ра́дуйтеся Ему́ с тре́петом.</p>
 			<p>Приими́те наказа́ние, да не когда́ прогне́вается Госпо́дь и поги́бнете от пути́ пра́веднаго, егда́ возгори́тся вско́ре я́рость Его́. Блаже́ни вси наде́ющиися Нань.</p>
 		</div>
-		<div class="col txt txt-ru">
+		<div class="col txt txt-ru" style="display:none;">
 			<div>Псалом Давида</div>
 			<p>Зачем мятутся народы, и племена замышляют тщетное?</p>
 			<p>Восстают цари земли, и князья совещаются вместе против Господа и против Помазанника Его.</p>
@@ -266,7 +266,7 @@
 			<p>Служите Господу со страхом и радуйтесь [пред Ним] с трепетом.</p>
 			<p>Почтите Сына, чтобы Он не прогневался, и чтобы вам не погибнуть в пути вашем, ибо гнев Его возгорится вскоре. Блаженны все, уповающие на Него.</p>
 		</div>
-		<div class="col txt txt-ln">
+		<div class="col txt txt-ln" style="display:none;">
 			<div>&nbsp;</div>
 			<p>Деян 4:25.</p>
 			<p class="invisible"></p>
@@ -306,7 +306,7 @@
 			<p>Воскресни́, Го́споди, спаси́ мя, Бо́же мой, я́ко Ты порази́л еси́ вся вражду́ющыя ми всу́е: зу́бы гре́шников сокруши́л еси́.</p>
 			<p>Госпо́дне есть спасе́ние, и на лю́дех Твои́х благослове́ние Твое́.</p>
 		</div>
-		<div class="col txt txt-ru">
+		<div class="col txt txt-ru" style="display:none;">
 			<p>Псалом Давида, когда он бежал от Авессалома, сына своего.</p>
 			<p>Господи! как умножились враги мои! Многие восстают на меня;</p>
 			<p>многие говорят душе моей: «нет ему спасения в Боге».</p>
@@ -317,7 +317,7 @@
 			<p>Восстань, Господи! спаси меня, Боже мой! ибо Ты поражаешь в ланиту всех врагов моих; сокрушаешь зубы нечестивых.</p>
 			<p>От Господа спасение. Над народом Твоим благословение Твое.</p>
 		</div>
-		<div class="col txt txt-ln">
+		<div class="col txt txt-ln" style="display:none;">
 			<p>2 Цар 15:14.</p>
 			<p class="invisible"></p>
 			<p class="invisible"></p>
@@ -353,7 +353,7 @@
 			<p>Дал еси́ весе́лие в се́рдце мое́м: от плода́ пшени́цы, вина́ и еле́а своего́ умно́жишася.</p>
 			<p>В ми́ре вку́пе усну́ и почи́ю, я́ко Ты, Го́споди, еди́наго на упова́нии всели́л мя еси́.</p>
 		</div>
-		<div class="col txt txt-ru">
+		<div class="col txt txt-ru" style="display:none;">
 			<p>Начальнику хора. На струнных <em>орудиях</em>. Псалом Давида.</p>
 			<p>Когда я взываю, услышь меня, Боже правды моей! В тесноте Ты давал мне простор. Помилуй меня и услышь молитву мою.</p>
 			<p>Сыны мужей! доколе слава моя будет в поругании? доколе будете любить суету и искать лжи?</p>
@@ -364,7 +364,7 @@
 			<p>Ты исполнил сердце мое веселием с того времени, как у них хлеб и вино [и елей] умножились.</p>
 			<p>Спокойно ложусь я и сплю, ибо Ты, Господи, един даешь мне жить в безопасности.</p>
 		</div>
-		<div class="col txt txt-ln">
+		<div class="col txt txt-ln" style="display:none;">
 			<p class="invisible"></p>
 			<p>Пс 3:2.</p>
 			<p>Иов 27:12.</p>
@@ -382,9 +382,9 @@
 		</div>
 		<div class="col txt txt-cf">
 		</div>
-		<div class="col txt txt-ru">
+		<div class="col txt txt-ru" style="display:none;">
 		</div>
-		<div class="col txt txt-ln">
+		<div class="col txt txt-ln" style="display:none;">
 		</div>
 	</div>
 -->
