Приложение psalter: для указания на цвет --bs-dark использована CSS-функция var()

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -59,13 +59,13 @@
 		}
 
 		.txt div:first-child, .txt p:first-child {
-			color:red;
+			color: red;
 			display: block;
 			margin-bottom: 0;
 		}
 
 		.txt.txt-ln div:first-child, .txt.txt-ln p:first-child {
-			color: #212529;
+			color: var(--bs-dark);
 		}
 
 		.txt {
