--- a/psalter/index.html
+++ b/psalter/index.html
@@ -20,10 +20,6 @@
 			font-size: 1em;
 		}
 
-		#mainContent .col {
-			min-width: 350px;
-		}
-
 		[data-type=header] {
 			position: fixed;
 			top: 60px;
@@ -65,6 +61,8 @@
 
 		.txt {
 			counter-reset:cnt;
+			min-width: 350px;
+			margin-bottom: 10px;
 		}
 
 		.txt p {
