Приложение psalter: для строки заголовков установлена минимальная ширина колонок

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -28,6 +28,10 @@
 			z-index: 1000;
 		}
 
+		[data-type=header] .col {
+			min-width: 350px;
+		}
+
 		[data-type=psalm] {
 			padding-top: 50px;
 			position: relative;
