Приложение radio: добавлено управление громкостью воспроизведения из интерфейса приложения. Небольшие визуальные улучшения.

--- a/radio/index.html
+++ b/radio/index.html
@@ -53,9 +53,9 @@
 <audio id="player"></audio>
 
 <div class="container h-50 text-center rounded-3 d-flex flex-column justify-content-evenly">
-	<div class="row" style="height: 80px;">
+	<div class="row">
 		<div class="col" id="alert-container">
-			<div class="alert" role="alert"></div>
+			<div class="alert text-primary border-primary" role="alert">&nbsp;</div>
 		</div>
 	</div>
 
@@ -65,13 +65,24 @@
 		</div>
 	</div>
 
-	<div class="row" style="height: 80px;">
-		<div class="col" id="sound-volume-container"></div>
+	<div class="row" id="sound-volume-container">
+		<div class="col-2 text-center text-primary">
+			<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" viewBox="0 0 16 16">
+				<path d="M7 4a.5.5 0 0 0-.812-.39L3.825 5.5H1.5A.5.5 0 0 0 1 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 7 12V4zM4.312 6.39 6 5.04v5.92L4.312 9.61A.5.5 0 0 0 4 9.5H2v-3h2a.5.5 0 0 0 .312-.11z"/>
+				<path d="M10.025 8a4.486 4.486 0 0 1-1.318 3.182L8 10.475A3.489 3.489 0 0 0 9.025 8c0-.966-.392-1.841-1.025-2.475l.707-.707A4.486 4.486 0 0 1 10.025 8z"/>
+				<path d="M10.121 12.596A6.48 6.48 0 0 0 12.025 8a6.48 6.48 0 0 0-1.904-4.596l-.707.707A5.483 5.483 0 0 1 11.025 8a5.483 5.483 0 0 1-1.61 3.89l.706.706z"/>
+				<path d="M11.536 14.01A8.473 8.473 0 0 0 14.026 8a8.473 8.473 0 0 0-2.49-6.01l-.708.707A7.476 7.476 0 0 1 13.025 8c0 2.071-.84 3.946-2.197 5.303l.708.707z"/>
+				<path class="d-none" d="M13.854 5.646a.5.5 0 0 1 0 .708L12.207 8l1.647 1.646a.5.5 0 0 1-.708.708L11.5 8.707l-1.646 1.647a.5.5 0 0 1-.708-.708L10.793 8 9.146 6.354a.5.5 0 1 1 .708-.708L11.5 7.293l1.646-1.647a.5.5 0 0 1 .708 0z"/>
+			</svg>
+		</div>
+		<div class="col-10 d-flex align-items-center">
+			<input type="range" class="form-range" min="0" max="1" value="1" step=".01" autocomplete="off">
+		</div>
 	</div>
 
 </div>
 
-<div style="display: none;">
+<div style="display:none;">
 	<span id="equalizer">
 		<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
 			<path fill-rule="evenodd" d="M8.5 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11a.5.5 0 0 1 .5-.5z"></path>
@@ -101,7 +112,6 @@ const audioErrors = {
 };
 
 $(document).ready(function() {
-	$('rect').addClass('animation-none');
 	let i = 0;
 	for(let sName in stations) {
 		$('#stations').append(
@@ -109,7 +119,7 @@ $(document).ready(function() {
 			'<label class="btn btn-outline-primary" for="btnradio' + i + '">' + sName + '</label>');
 	}
 
-	$('#stations input').on('click', function(event) {
+	$('#stations input').on('click', function(ev) {
 		let t = $(event.target);
 		let p = $('#player');
 		if(p.prop('src')!=t.data('src')) {
@@ -122,11 +132,11 @@ $(document).ready(function() {
 			p[0].play().then(()=>{
 				$('#alert-container .alert').html($(document).attr('title'));
 				$('#alert-container .alert').removeClass('alert-danger');
-				$('#alert-container .alert').addClass('alert-primary');
+				$('#alert-container .alert').addClass('text-primary border-primary');
 				$('label.btn span').removeClass('animation-none');
 			}).catch(error => {
 				$('#alert-container .alert').html(audioErrors[error.name] || error.name);
-				$('#alert-container .alert').removeClass('alert-primary');
+				$('#alert-container .alert').removeClass('text-primary border-primary');
 				$('#alert-container .alert').addClass('alert-danger');
 				$('label.btn span').addClass('animation-none');
 				$(':checked').prop('checked', false);
@@ -137,6 +147,24 @@ $(document).ready(function() {
 			t.prop('checked', false);
 			$('label.btn span').addClass('animation-none');
 		}
+	});
+
+	$('#sound-volume-container input.form-range').on('input', function(ev) {
+		let v = this.value;
+
+		let volSignPathes = $('#sound-volume-container :first-child svg').children();
+		let volSignClasses =
+			(v==0)			? ['text-muted', 'd-none', 'd-none', 'd-none', 'text-muted'] :
+			(v>0  && v<=.3) ? ['text-muted', 'text-muted', 'text-muted', 'text-muted', 'd-none'] :
+			(v>.3 && v<=.6) ? ['', '', 'text-muted', 'text-muted', 'd-none'] :
+			(v>.5 && v<=.9) ? ['', '', '', 'text-muted', 'd-none'] :
+							  ['', '', '', '', 'd-none'];
+
+		for(let i=0; i<volSignClasses.length; i++) {
+			volSignPathes.eq(i).removeClass().addClass(volSignClasses[i]);
+		}
+
+		$('#player')[0].volume = v;
 	});
 
 	$('#stations input#btnradio' + (Math.floor(Math.random() * i) + 1)).trigger('click');
