Приложение psalter: исправлены неточности в церковнославянском тексте

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -183,7 +183,7 @@
 			<div>Ѱало́мъ дв҃дꙋ, не надпи́санъ ѹ҆ є҆врє́й</div>
 			<p>Бл҃же́нъ мꙋ́жъ, и҆́же не и҆́де на совѣ́тъ нечести́выхъ, и҆ на пꙋтѝ грѣ́шныхъ не ста̀, и҆ на сѣда́лищи гꙋби́телей не сѣ́де:</p>
 			<p>но въ зако́нѣ гдⷭ҇ни во́лѧ є҆гѡ̀, и҆ въ зако́нѣ є҆гѡ̀ поꙋчи́тсѧ де́нь и҆ но́щь.</p>
-			<p>И҆ бꙋ́детъ ꙗ҆́кѡ дре́во насажде́ное при и҆схо́дищихъ во́дъ, є҆́же пло́дъ сво́й да́стъ во вре́мѧ своѐ, и҆ ли́стъ є҆гѡ̀ не ѿпаде́тъ: и҆ всѧ̑, є҆ли̑ка а҆́ще твори́тъ, ᲂу҆спѣ́етъ.</p>
+			<p>И҆ бꙋ́детъ ꙗ҆́кѡ дре́во насажде́ное при и҆схо́дищихъ во́дъ, є҆́же пло́дъ сво́й да́стъ во вре́мѧ своѐ, и҆ ли́стъ є҆гѡ̀ не ѿпаде́тъ: и҆ всѧ̑, є҆ли̑ка а҆́ще твори́тъ, ѹ҆спѣ́етъ.</p>
 			<p>Не та́кѡ нечести́вїи, не та́кѡ: но ꙗ҆́кѡ пра́хъ, є҆го́же возмета́етъ вѣ́тръ ѿ лица̀ землѝ.</p>
 			<p>Сегѡ̀ ра́ди не воскре́снꙋтъ нечести́вїи на сꙋ́дъ, нижѐ грѣ̑шницы въ совѣ́тъ првⷣныхъ.</p>
 			<p>Ꙗ҆́кѡ вѣ́сть гдⷭ҇ь пꙋ́ть првⷣныхъ, и҆ пꙋ́ть нечести́выхъ поги́бнетъ.</p>
@@ -222,13 +222,13 @@
 			<div>Ѱало́мъ дв҃дꙋ</div>
 			<p>Вскꙋ́ю шата́шасѧ ꙗ҆зы́цы, и҆ лю́дїе поꙋчи́шасѧ тщє́тнымъ;</p>
 			<p>Предста́ша ца́рїе зе́мстїи, и҆ кнѧ̑зи собра́шасѧ вкꙋ́пѣ на гдⷭ҇а и҆ на хрⷭ҇та̀ є҆гѡ̀.</p>
-			<p>Расто́ргнемъ {расто́ргнимъ} ᲂу҆́зы и҆́хъ и҆ ѿве́ржемъ {ѿве́ржимъ} ѿ на́съ и҆́го и҆́хъ.</p>
+			<p>Расто́ргнемъ ѹ҆́зы и҆́хъ и҆ ѿве́ржемъ ѿ на́съ и҆́го и҆́хъ.</p>
 			<p>Живы́й на нб҃сѣ́хъ посмѣе́тсѧ и҆̀мъ, и҆ гдⷭ҇ь порꙋга́етсѧ и҆̀мъ.</p>
 			<p>Тогда̀ возгл҃етъ къ ни̑мъ гнѣ́вомъ свои́мъ и҆ ꙗ҆́ростїю свое́ю смѧте́тъ ѧ҆̀:</p>
 			<p>а҆́зъ же поста́вленъ є҆́смь цр҃ь ѿ негѡ̀ над̾ сїѡ́номъ, горо́ю ст҃о́ю є҆гѡ̀,</p>
 			<p>возвѣща́ѧй повелѣ́нїе гдⷭ҇не. Гдⷭ҇ь речѐ ко мнѣ̀: сн҃ъ мо́й є҆сѝ ты̀, а҆́зъ дне́сь роди́хъ тѧ̀:</p>
 			<p>просѝ ѿ менє̀, и҆ да́мъ тѝ ꙗ҆зы́ки достоѧ́нїе твоѐ, и҆ ѡ҆держа́нїе твоѐ концы̀ землѝ:</p>
-			<p>ᲂу҆пасе́ши ѧ҆̀ жезло́мъ желѣ́знымъ, ꙗ҆́кѡ сосꙋ́ды скꙋдє́льничи сокрꙋши́ши ѧ҆̀.</p>
+			<p>ѹ҆пасе́ши ѧ҆̀ жезло́мъ желѣ́знымъ, ꙗ҆́кѡ сосꙋ́ды скꙋдє́льничи сокрꙋши́ши ѧ҆̀.</p>
 			<p>И҆ нн҃ѣ, ца́рїе, разꙋмѣ́йте, накажи́тесѧ всѝ сꙋдѧ́щїи землѝ.</p>
 			<p>Рабо́тайте гдⷭ҇еви со стра́хомъ, и҆ ра́дꙋйтесѧ є҆мꙋ̀ со тре́петомъ.</p>
 			<p>Прїими́те наказа́нїе, да не когда̀ прогнѣ́ваетсѧ гдⷭ҇ь, и҆ поги́бнете ѿ пꙋтѝ првⷣнагѡ, є҆гда̀ возгори́тсѧ вско́рѣ ꙗ҆́рость є҆гѡ̀: бл҃же́ни всѝ надѣ́ющїисѧ на́нь.</p>
@@ -283,12 +283,12 @@
 	<div class="row" data-type="psalm" data-id="3">
 		<div class="col txt txt-cu">
 			<p>Ѱало́мъ дв҃дꙋ, внегда̀ ѿбѣга́ше ѿ лица̀ а҆вессалѡ́ма сы́на своегѡ̀</p>
-			<p>Гдⷭ҇и, что́ сѧ ᲂу҆мно́жиша стꙋжа́ющїи мѝ; мно́зи востаю́тъ на мѧ̀,</p>
+			<p>Гдⷭ҇и, что́ сѧ ѹ҆мно́жиша стꙋжа́ющїи мѝ; мно́зи востаю́тъ на мѧ̀,</p>
 			<p>мно́зи глаго́лютъ дꙋшѝ мое́й: нѣ́сть спⷭ҇нїѧ є҆мꙋ̀ въ бз҃ѣ є҆гѡ̀.</p>
 			<p>Ты́ же, гдⷭ҇и, застꙋ́пникъ мо́й є҆сѝ, сла́ва моѧ̀, и҆ возносѧ́й главꙋ̀ мою̀.</p>
-			<p>Гла́сомъ мои́мъ ко гдⷭ҇ꙋ воззва́хъ, и҆ ᲂу҆слы́ша мѧ̀ ѿ горы̀ ст҃ы́ѧ своеѧ̀.</p>
-			<p>А҆́зъ ᲂу҆снꙋ́хъ, и҆ спа́хъ, воста́хъ, ꙗ҆́кѡ гдⷭ҇ь застꙋ́питъ мѧ̀.</p>
-			<p>Не ᲂу҆бою́сѧ ѿ те́мъ люді́й, ѡ҆́крестъ напа́дающихъ на мѧ̀.</p>
+			<p>Гла́сомъ мои́мъ ко гдⷭ҇ꙋ воззва́хъ, и҆ ѹ҆слы́ша мѧ̀ ѿ горы̀ ст҃ы́ѧ своеѧ̀.</p>
+			<p>А҆́зъ ѹ҆снꙋ́хъ, и҆ спа́хъ, воста́хъ, ꙗ҆́кѡ гдⷭ҇ь застꙋ́питъ мѧ̀.</p>
+			<p>Не ѹ҆бою́сѧ ѿ те́мъ люді́й, ѡ҆́крестъ напа́дающихъ на мѧ̀.</p>
 			<p>Воскрⷭ҇нѝ, гдⷭ҇и, сп҃си́ мѧ, бж҃е мо́й: ꙗ҆́кѡ ты̀ порази́лъ є҆сѝ всѧ̑ враждꙋ́ющыѧ мѝ всꙋ́е, зꙋ́бы грѣ́шникѡвъ сокрꙋши́лъ є҆сѝ.</p>
 			<p>Гдⷭ҇не є҆́сть спⷭ҇нїе, и҆ на лю́дехъ твои́хъ блгⷭ҇ве́нїе твоѐ.</p>
 		</div>
@@ -330,14 +330,14 @@
 	<div class="row" data-type="psalm" data-id="4">
 		<div class="col txt txt-cu">
 			<p>Въ коне́цъ, въ пѣ́снехъ, ѱало́мъ дв҃дꙋ,</p>
-			<p>Внегда̀ призва́ти мѝ, ᲂу҆слы́ша мѧ̀ бг҃ъ пра́вды моеѧ̀: въ ско́рби распространи́лъ мѧ̀ є҆сѝ: ᲂу҆ще́дри мѧ̀ и҆ ᲂу҆слы́ши моли́твꙋ мою̀.</p>
+			<p>Внегда̀ призва́ти мѝ, ѹ҆слы́ша мѧ̀ бг҃ъ пра́вды моеѧ̀: въ ско́рби распространи́лъ мѧ̀ є҆сѝ: ѹ҆ще́дри мѧ̀ и҆ ѹ҆слы́ши моли́твꙋ мою̀.</p>
 			<p>Сы́нове человѣ́честїи, доко́лѣ тѧжкосе́рдїи; вскꙋ́ю лю́бите сꙋетꙋ̀ и҆ и҆́щете лжѝ;</p>
-			<p>И҆ ᲂу҆вѣ́дите, ꙗ҆́кѡ ᲂу҆дивѝ гдⷭ҇ь прпⷣбнаго своего̀. Гдⷭ҇ь ᲂу҆слы́шитъ мѧ̀, внегда̀ воззва́ти мѝ къ немꙋ̀.</p>
-			<p>Гнѣ́вайтесѧ, и҆ не согрѣша́йте, ꙗ҆̀же глаго́лете въ сердца́хъ ва́шихъ, на ло́жахъ ва́шихъ ᲂу҆мили́тесѧ:</p>
-			<p>пожри́те же́ртвꙋ пра́вды и҆ ᲂу҆пова́йте на гдⷭ҇а.</p>
+			<p>И҆ ѹ҆вѣ́дите, ꙗ҆́кѡ ѹ҆дивѝ гдⷭ҇ь прпⷣбнаго своего̀. Гдⷭ҇ь ѹ҆слы́шитъ мѧ̀, внегда̀ воззва́ти мѝ къ немꙋ̀.</p>
+			<p>Гнѣ́вайтесѧ, и҆ не согрѣша́йте, ꙗ҆̀же глаго́лете въ сердца́хъ ва́шихъ, на ло́жахъ ва́шихъ ѹ҆мили́тесѧ:</p>
+			<p>пожри́те же́ртвꙋ пра́вды и҆ ѹ҆пова́йте на гдⷭ҇а.</p>
 			<p>Мно́зи глаго́лютъ: кто̀ ꙗ҆ви́тъ на́мъ бл҃га̑ѧ; зна́менасѧ на на́съ свѣ́тъ лица̀ твоегѡ̀, гдⷭ҇и.</p>
-			<p>Да́лъ є҆сѝ весе́лїе въ се́рдцы мое́мъ: ѿ плода̀ пшени́цы, вїна̀ и҆ є҆ле́а своегѡ̀ ᲂу҆мно́жишасѧ:</p>
-			<p>въ ми́рѣ вкꙋ́пѣ ᲂу҆снꙋ̀ и҆ почі́ю, ꙗ҆́кѡ ты̀, гдⷭ҇и, є҆ди́наго на ᲂу҆пова́нїи всели́лъ мѧ̀ є҆сѝ.</p>
+			<p>Да́лъ є҆сѝ весе́лїе въ се́рдцы мое́мъ: ѿ плода̀ пшени́цы, вїна̀ и҆ є҆ле́а своегѡ̀ ѹ҆мно́жишасѧ:</p>
+			<p>въ ми́рѣ вкꙋ́пѣ ѹ҆снꙋ̀ и҆ почі́ю, ꙗ҆́кѡ ты̀, гдⷭ҇и, є҆ди́наго на ѹ҆пова́нїи всели́лъ мѧ̀ є҆сѝ.</p>
 		</div>
 		<div class="col txt txt-cf">
 			<p>В коне́ц, в пе́снех псало́м Дави́ду.</p>
