--- a/psalter/index.html
+++ b/psalter/index.html
@@ -10,19 +10,12 @@
 	<link rel="stylesheet" href="https://slavonic.github.io/css/fonts.css" type="text/css">
 	<style type="text/css">
 		body {
-			padding-top: 40px !important;; /* для nav position:fixed */
-		}
-
-		.navbar .badge {
-			padding: .48em .65em .22em;
-			user-select: none;
-			font-family: 'Monomakh Unicode';
-			font-size: 1em;
+			padding-top: 40px !important; /* для nav position:fixed */
 		}
 
 		[data-type=header] {
 			position: fixed;
-			top: 60px;
+			top: 61px;
 			right: 0;
 			left: 0;
 			z-index: 1000;
@@ -111,8 +104,7 @@
 <body>
 <nav class="navbar fixed-top navbar-light bg-light">
 	<div class="container-fluid">
-		<div class="navbar-brand mb-0 h1"><span class="badge rounded-pill bg-primary">Ѱ</span> Псалтырь</div>
-		<div class="navbar-brand mb-0 h1"></div>
+		<div class="navbar-brand d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35" class="text-primary"><path fill-rule="evenodd" clip-rule="evenodd" fill="currentColor"  d="M 13.00,0.31 C -6.92,6.92 -2.41,33.62 16.00,34.90 39.83,36.57 41.43,1.67 19.00,0.31 16.72,-0.06 15.22,0.17 13.00,0.31 Z M 5.47,11.21 C 5.47,11.21 6.56,11.21 6.56,11.21 6.92,11.21 7.02,11.27 7.10,11.59 7.10,11.59 10.59,23.76 10.59,23.76 10.59,23.76 15.09,23.76 15.09,23.76 15.09,23.76 15.09,29.18 15.09,29.18 15.09,29.18 13.64,29.18 13.64,29.18 13.64,29.18 13.64,30.00 13.64,30.00 13.64,30.00 20.48,30.00 20.48,30.00 20.48,30.00 20.48,29.18 20.48,29.18 20.48,29.18 19.03,29.18 19.03,29.18 19.03,29.18 19.03,23.76 19.03,23.76 19.03,23.76 21.32,23.76 21.32,23.76 21.60,22.17 22.49,17.50 23.34,14.68 23.72,13.61 24.16,13.05 24.89,13.05 25.33,13.05 25.96,13.33 26.53,13.79 27.10,14.27 27.53,14.59 27.70,14.59 27.91,14.59 28.05,14.41 28.08,14.13 28.27,12.80 28.57,12.06 29.36,10.57 28.54,10.21 27.48,9.89 26.61,9.89 23.56,9.89 22.80,12.78 22.28,14.67 21.54,17.42 20.80,21.18 20.45,22.91 20.45,22.91 19.03,22.91 19.03,22.91 19.03,22.91 19.03,6.81 19.03,6.81 19.03,6.81 20.48,6.81 20.48,6.81 20.48,6.81 20.48,5.96 20.48,5.96 20.48,5.96 13.64,5.96 13.64,5.96 13.64,5.96 13.64,6.81 13.64,6.81 13.64,6.81 15.09,6.81 15.09,6.81 15.09,6.81 15.09,22.91 15.09,22.91 15.09,22.91 14.24,22.91 14.24,22.91 14.24,22.91 10.64,10.38 10.64,10.38 10.64,10.38 5.47,10.38 5.47,10.38 5.47,10.38 5.47,11.21 5.47,11.21 Z" /></svg><div class="fs-4 lh-1 ms-3">Псалтырь</div></div>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCtrlPanel" aria-controls="navbarCtrlPanel" aria-expanded="false" aria-label="Панель управления">
 			<span class="navbar-toggler-icon"></span>
 		</button>
