Приложение psalter: шрифт церковнославянского текста заменён на Panteley (вместо Ponomar Unicode)

--- a/psalter/index.html
+++ b/psalter/index.html
@@ -7,8 +7,14 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://slavonic.github.io/css/fonts.css" type="text/css">
 	<style type="text/css">
+		@font-face {
+ 			font-family: 'Panteley';
+ 			src: url('./fonts/Panteley.ttf') format('truetype');
+ 			font-weight: normal;
+ 			font-style: normal;
+		}
+
 		body {
 			padding-top: 40px !important; /* для nav position:fixed */
 		}
@@ -41,9 +47,9 @@
 		}
 
 		.txt.txt-cu {
-			font-family: 'Ponomar Unicode';
+			font-family: 'Panteley';
 			font-size: 110%;
-			line-height: 1.35;
+			line-height: 1.36;
 		}
 
 		.txt div:first-child, .txt p:first-child {
@@ -261,7 +267,7 @@ function formSectionContent(data_sec, num) {
 const data = {
 	psalms: {
 		'1': {
-			cu: ['Ѱало́мъ дв҃дꙋ, не надпи́санъ ѹ҆ є҆врє́й.', ['Бл҃же́нъ мꙋ́жъ, и҆́же не и҆́де на совѣ́тъ нечести́выхъ, и҆ на пꙋтѝ грѣ́шныхъ не ста̀, и҆ на сѣда́лищи гꙋби́телей не сѣ́де:', 'но въ зако́нѣ гдⷭ҇ни во́лѧ є҆гѡ̀, и҆ въ зако́нѣ є҆гѡ̀ поꙋчи́тсѧ де́нь и҆ но́щь.', 'И҆ бꙋ́детъ ꙗ҆́кѡ дре́во насажде́ное при и҆схо́дищихъ во́дъ, є҆́же пло́дъ сво́й да́стъ во вре́мѧ своѐ, и҆ ли́стъ є҆гѡ̀ не ѿпаде́тъ: и҆ всѧ̑, є҆ли̑ка а҆́ще твори́тъ, ѹ҆спѣ́етъ.', 'Не та́кѡ нечести́вїи, не та́кѡ: но ꙗ҆́кѡ пра́хъ, є҆го́же возмета́етъ вѣ́тръ ѿ лица̀ землѝ.', 'Сегѡ̀ ра́ди не воскре́снꙋтъ нечести́вїи на сꙋ́дъ, нижѐ грѣ̑шницы въ совѣ́тъ првⷣныхъ.', 'Ꙗ҆́кѡ вѣ́сть гдⷭ҇ь пꙋ́ть првⷣныхъ, и҆ пꙋ́ть нечести́выхъ поги́бнетъ.']],
+			cu: ['Ѱало́мъ дв҃дꙋ, не надпи́санъ ѹ҆ є҆врє́й.', ['Бл҃же́нъ мꙋ́жъ, и҆́же не и҆́де на совѣ́тъ нечести́выхъ, и҆ на пꙋтѝ грѣ́шныхъ не ста̀, и҆ на сѣда́лищи гꙋби́телей не сѣ́де:', 'но въ зако́нѣ гдⷭ҇ни во́лѧ є҆гѡ̀, и҆ въ зако́нѣ є҆гѡ̀ поꙋчи́тсѧ де́нь и҆ но́щь.', 'И҆ бꙋ́детъ ꙗ҆́кѡ дре́во насажде́ное при и҆схо́дищихъ во́дъ, є҆́же пло́дъ сво́й да́стъ во вре́мѧ своѐ, и҆ ли́стъ є҆гѡ̀ не ѿпаде́тъ: и҆ всѧ̑, є҆ли̑ка а҆́ще твори́тъ, ѹ҆спѣ́етъ.', 'Не та́кѡ нечести́вїи, не та́кѡ: но ꙗ҆́кѡ пра́хъ, є҆го́же возмета́етъ вѣ́тръ ѿ лица̀ землѝ.', 'Сегѡ̀ ра́ди не воскре́снꙋтъ нечести́вїи на сꙋ́дъ, нижѐ грѣ̑шницы въ совѣ́тъ првⷣныхъ.', 'Ꙗ҆́кѡ вѣ́сть гдⷭ҇ь пꙋ́ть првⷣныхъ, и҆ пꙋ́ть нечести́выхъ поги́бнетъ.']],
 			cf: ['Псало́м Дави́ду, не надпи́сан у евре́й.', ['Блаже́н муж, и́же не и́де на сове́т нечести́вых и на пути́ гре́шных не ста, и на седа́лищи губи́телей не се́де,', 'но в зако́не Госпо́дни во́ля eго́, и в зако́не Его́ поучи́тся день и нощь.', 'И бу́дет я́ко дре́во насажде́нное при исхо́дищих вод, е́же плод свой даст во вре́мя свое́, и лист eго́ не отпаде́т, и вся, ели́ка а́ще твори́т, успе́ет.', 'Не та́ко нечести́вии, не та́ко, но я́ко прах, eго́же возмета́ет ветр от лица́ земли́.', 'Сего́ ра́ди не воскре́снут нечести́вии на суд, ниже́ гре́шницы в сове́т пра́ведных.', 'Я́ко весть Госпо́дь путь пра́ведных, и путь нечести́вых поги́бнет.']],
 			ru: ['Псалом Давида, не надписанный у евреев.', ['Блажен муж, который не ходит на совет нечестивых и не стоит на пути грешных и не сидит в собрании развратителей,', 'но в законе Господа воля его, и о законе Его размышляет он день и ночь!', 'И будет он как дерево, посаженное при потоках вод, которое приносит плод свой во время свое и лист которого не вянет; и во всем, что он ни делает, успеет.', 'Не так — нечестивые, [не так]: но они — как прах, возметаемый ветром [с лица земли].', '<abbr title="В славянском переводе: Сего ради не воскреснут...">Потому не устоят</abbr> нечестивые на суде и грешники — в собрании праведных.', 'Ибо знает Господь путь праведных, а путь нечестивых погибнет.']],
 			ln: ['', ['Пс 25:4; Иер 15:17; Притч 10:30.', 'Нав 1:8.', 'Пс 91:13; Иер 17:8.', 'Иов 21:18; Ис 29:5.', 'Мф 25:32.', 'Наум 1:7; Ин 10:14; 2 Тим 2:19.']]
@@ -273,7 +279,7 @@ const data = {
 			ln:['', ['Деян 4:25.', '', '', 'Втор 28:63; Притч 1:26.', '', 'Пс 92:1; Ин 18:37; Евр 12:22.', 'Деян 13:33; Евр 1:5; Евр 5:5.', 'Пс 21:28.', 'Откр 2:27; Откр 19:15.', 'Прем 6:2.', '', 'Пс 33:9; Притч 16:20; Ис 30:18; 1 Пет 2:6.']]
 		},
 		'3': {
-			cu:[['Ѱало́мъ дв҃дꙋ, внегда̀ ѿбѣга́ше ѿ лица̀ а҆вессалѡ́ма сы́на своегѡ̀', 'Гдⷭ҇и, что́ сѧ ѹ҆мно́жиша стꙋжа́ющїи мѝ; мно́зи востаю́тъ на мѧ̀,', 'мно́зи глаго́лютъ дꙋшѝ мое́й: нѣ́сть спⷭ҇нїѧ є҆мꙋ̀ въ бз҃ѣ є҆гѡ̀.', 'Ты́ же, гдⷭ҇и, застꙋ́пникъ мо́й є҆сѝ, сла́ва моѧ̀, и҆ возносѧ́й главꙋ̀ мою̀.', 'Гла́сомъ мои́мъ ко гдⷭ҇ꙋ воззва́хъ, и҆ ѹ҆слы́ша мѧ̀ ѿ горы̀ ст҃ы́ѧ своеѧ̀.', 'А҆́зъ ѹ҆снꙋ́хъ, и҆ спа́хъ, воста́хъ, ꙗ҆́кѡ гдⷭ҇ь застꙋ́питъ мѧ̀.', 'Не ѹ҆бою́сѧ ѿ те́мъ люді́й, ѡ҆́крестъ напа́дающихъ на мѧ̀.', 'Воскрⷭ҇нѝ, гдⷭ҇и, сп҃си́ мѧ, бж҃е мо́й: ꙗ҆́кѡ ты̀ порази́лъ є҆сѝ всѧ̑ враждꙋ́ющыѧ мѝ всꙋ́е, зꙋ́бы грѣ́шникѡвъ сокрꙋши́лъ є҆сѝ.', 'Гдⷭ҇не є҆́сть спⷭ҇нїе, и҆ на лю́дехъ твои́хъ блгⷭ҇ве́нїе твоѐ.']],
+			cu:[['Ѱало́мъ дв҃дꙋ, внегда̀ ѿбѣга́ше ѿ лица̀ а҆вессалѡ́ма сы́на своегѡ̀.', 'Гдⷭ҇и, что́ сѧ ѹ҆мно́жиша стꙋжа́ющїи мѝ; мно́зи востаю́тъ на мѧ̀,', 'мно́зи глаго́лютъ дꙋшѝ мое́й: нѣ́сть спⷭ҇нїѧ є҆мꙋ̀ въ бз҃ѣ є҆гѡ̀.', 'Ты́ же, гдⷭ҇и, застꙋ́пникъ мо́й є҆сѝ, сла́ва моѧ̀, и҆ возносѧ́й главꙋ̀ мою̀.', 'Гла́сомъ мои́мъ ко гдⷭ҇ꙋ воззва́хъ, и҆ ѹ҆слы́ша мѧ̀ ѿ горы̀ ст҃ы́ѧ своеѧ̀.', 'А҆́зъ ѹ҆снꙋ́хъ, и҆ спа́хъ, воста́хъ, ꙗ҆́кѡ гдⷭ҇ь застꙋ́питъ мѧ̀.', 'Не ѹ҆бою́сѧ ѿ те́мъ люді́й, ѡ҆́крестъ напа́дающихъ на мѧ̀.', 'Воскрⷭ҇нѝ, гдⷭ҇и, сп҃си́ мѧ, бж҃е мо́й: ꙗ҆́кѡ ты̀ порази́лъ є҆сѝ всѧ̑ враждꙋ́ющыѧ мѝ всꙋ́е, зꙋ́бы грѣ́шникѡвъ сокрꙋши́лъ є҆сѝ.', 'Гдⷭ҇не є҆́сть спⷭ҇нїе, и҆ на лю́дехъ твои́хъ блгⷭ҇ве́нїе твоѐ.']],
 			cf:[['Псало́м Дави́ду, внегда́ отбега́ше от лица́ Авессало́ма, сы́на своего́.', 'Го́споди, что ся умно́жиша стужа́ющии ми? Мно́зи востаю́т на мя,', 'мно́зи глаго́лют души́ мое́й: несть спасе́ния eму́ в Бо́зе eго́.', 'Ты же, Го́споди, Засту́пник мой еси́, сла́ва моя́ и вознося́й главу́ мою́.', 'Гла́сом мои́м ко Го́споду воззва́х, и услы́ша мя от горы́ святы́я Своея́.', 'Аз усну́х, и спах, воста́х, я́ко Госпо́дь засту́пит мя.', 'Не убою́ся от тем люде́й, о́крест напа́дающих на мя.', 'Воскресни́, Го́споди, спаси́ мя, Бо́же мой, я́ко Ты порази́л еси́ вся вражду́ющыя ми всу́е: зу́бы гре́шников сокруши́л еси́.', 'Госпо́дне есть спасе́ние, и на лю́дех Твои́х благослове́ние Твое́.']],
 			ru:[['Псалом Давида, когда он бежал от Авессалома, сына своего.', 'Господи! как умножились враги мои! Многие восстают на меня;', 'многие говорят душе моей: «нет ему спасения в Боге».', 'Но Ты, Господи, щит предо мною, слава моя, и Ты возносишь голову мою.', 'Гласом моим взываю к Господу, и Он слышит меня со святой горы Своей.', 'Ложусь я, сплю и встаю, ибо Господь защищает меня.', 'Не убоюсь тем народа, которые со всех сторон ополчились на меня.', 'Восстань, Господи! спаси меня, Боже мой! ибо Ты поражаешь в ланиту всех врагов моих; сокрушаешь зубы нечестивых.', 'От Господа спасение. Над народом Твоим благословение Твое.']],
 			ln:[['2 Цар 15:14.', '', '', 'Пс 27:7.', '', '', 'Лк 12:4.', '', 'Ис 43:11; Ос 13:4.']]
